samples/_failures_safe/1761798112_0d93d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a4824cfa.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_a4824cfa.c:164:12: error: expected declaration or statement at end of input
  164 |     struct ParseResult result = {0, NULL, ""};
      |            ^~~~~~~~~~~
